--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,5 @@ dependencies {
     annotationProcessor 'com.github.hotchemi:permissionsdispatcher-processor:2.4.0'
     compile 'com.orhanobut:logger:2.1.1'
     compile 'com.googlecode.ez-vcard:ez-vcard:0.10.2'
+    compile 'org.greenrobot:eventbus:3.0.0'
 }
