--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,8 @@
 				<category android:name="android.intent.category.LAUNCHER"/>
 			</intent-filter>
 		</activity>
+		<activity android:name=".controller.ResolveActivity"
+			android:theme="@style/AppTheme.NoActionBar"/>
 	</application>
 
 </manifest>
