添加vcf解析 消息机制 中文过滤

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,5 @@ dependencies {
     compile 'com.orhanobut:logger:2.1.1'
     compile 'com.googlecode.ez-vcard:ez-vcard:0.10.2'
     compile 'org.greenrobot:eventbus:3.0.0'
+    compile 'com.github.ZieIony:NaturalDateFormat:-SNAPSHOT'
 }
