--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,14 @@
 apply plugin: 'com.android.application'
+apply plugin: 'io.fabric'
 
+repositories {
+    maven { url 'https://maven.fabric.io/public' }
+}
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
     defaultConfig {
-        applicationId "com.weikuo.elemenzhang.phonebookwk"
+        applicationId "mobi.trustlab.contactbackup"
         minSdkVersion 19
         targetSdkVersion 25
         versionCode 1
@@ -37,6 +41,9 @@ dependencies {
     compile 'com.orhanobut:logger:2.1.1'
     compile 'com.googlecode.ez-vcard:ez-vcard:0.10.2'
     compile 'org.greenrobot:eventbus:3.0.0'
-    compile 'com.github.ZieIony:NaturalDateFormat:-SNAPSHOT'
     compile 'xyz.danoz:recyclerviewfastscroller:0.1.3'
+    compile 'joda-time:joda-time:2.9.9'
+    compile('com.crashlytics.sdk.android:crashlytics:2.6.8@aar') {
+        transitive = true;
+    }
 }
