--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
 	<uses-permission android:name="android.permission.WRITE_CONTACTS"/>
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+
 	<application
 		android:name=".MyApplication"
 		android:allowBackup="true"
@@ -24,8 +25,17 @@
 				<category android:name="android.intent.category.LAUNCHER"/>
 			</intent-filter>
 		</activity>
-		<activity android:name=".controller.ResolveActivity"
+		<activity
+			android:name=".controller.ResolveActivity"
 			android:theme="@style/AppTheme.NoActionBar"/>
-	</application>
+		<activity
+			android:name=".controller.StorageActivity"
+			android:theme="@style/AppTheme.NoActionBar"/>
 
+		<meta-data
+			android:name="io.fabric.ApiKey"
+			android:value="3ab709a455b1273e345cafb1c1ef9e563f2e8898"
+			/>
+	</application>
+	<uses-permission android:name="android.permission.INTERNET"/>
 </manifest>
