--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,4 @@
+
 apply plugin: 'com.android.application'
 apply plugin: 'io.fabric'
 
@@ -19,6 +20,10 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+        debug{
+            debuggable true
+            minifyEnabled false
         }
     }
 }
