--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,15 @@
 			android:name="io.fabric.ApiKey"
 			android:value="3ab709a455b1273e345cafb1c1ef9e563f2e8898"
 			/>
+		<provider
+			android:name="android.support.v4.content.FileProvider"
+			android:authorities="mobi.trustlab.contactbackup"
+			android:grantUriPermissions="true"
+			android:exported="false">
+			<meta-data
+				android:name="android.support.FILE_PROVIDER_PATHS"
+				android:resource="@xml/filepaths" />
+		</provider>
 	</application>
 	<uses-permission android:name="android.permission.INTERNET"/>
 </manifest>
