--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
 		android:supportsRtl="true"
 		android:theme="@style/AppTheme">
 		<activity
+			android:screenOrientation="portrait"
 			android:name=".MainActivity"
 			android:label="@string/app_name"
 			android:theme="@style/AppTheme.NoActionBar">
@@ -26,9 +27,11 @@
 			</intent-filter>
 		</activity>
 		<activity
+			android:screenOrientation="portrait"
 			android:name=".controller.ResolveActivity"
 			android:theme="@style/AppTheme.NoActionBar"/>
 		<activity
+			android:screenOrientation="portrait"
 			android:name=".controller.StorageActivity"
 			android:theme="@style/AppTheme.NoActionBar"/>
 
@@ -45,6 +48,7 @@
 				android:name="android.support.FILE_PROVIDER_PATHS"
 				android:resource="@xml/filepaths" />
 		</provider>
+		<service android:name=".controller.ContactSyncService"/>
 	</application>
 	<uses-permission android:name="android.permission.INTERNET"/>
 </manifest>
